--- a/kubernetes/apps/actions-runner-system/gha-runner-scale-set/ks.yaml
+++ b/kubernetes/apps/actions-runner-system/gha-runner-scale-set/ks.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app gha-runner-scale-set
-  namespace: flux-system
+  namespace: &namespace actions-runner-system
 spec:
-  targetNamespace: actions-runner-system
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
