--- a/kubernetes/apps/databases/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/ks.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudnative-pg
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/apps/databases/cloudnative-pg/app
@@ -26,9 +26,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudnative-pg-cluster
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   dependsOn:
     - name: cloudnative-pg
   path: ./kubernetes/apps/databases/cloudnative-pg/cluster
