--- a/kubernetes/apps/databases/dragonfly/ks.yaml
+++ b/kubernetes/apps/databases/dragonfly/ks.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname dragonfly-operator
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
@@ -23,9 +23,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname dragonfly-cluster
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
