--- a/kubernetes/apps/databases/emqx/ks.yaml
+++ b/kubernetes/apps/databases/emqx/ks.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname emqx
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
@@ -26,9 +26,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname emqx-cluster
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
