--- a/kubernetes/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/apps/databases/influxdb/ks.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname influxdb
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
