--- a/kubernetes/apps/databases/postgres-backup/ks.yaml
+++ b/kubernetes/apps/databases/postgres-backup/ks.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: postgres-backup
-  namespace: flux-system
+  namespace: &namespace databases
 spec:
-  targetNamespace: databases
+  targetNamespace: *namespace
   dependsOn:
     - name: cloudnative-pg-cluster
   path: ./kubernetes/apps/databases/postgres-backup/app
