--- a/kubernetes/apps/monitoring/kube-state-metrics/ks.yaml
+++ b/kubernetes/apps/monitoring/kube-state-metrics/ks.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname kube-state-metrics
-  namespace: flux-system
+  namespace: &namespace monitoring
 spec:
-  targetNamespace: monitoring
+  targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
