--- a/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudflare-ddns
-  namespace: flux-system
+  namespace: &namespace networking
 spec:
-  targetNamespace: networking
+  targetNamespace: *namespace
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/apps/networking/cloudflare-ddns/app
