--- a/kubernetes/apps/networking/external-services/ks.yaml
+++ b/kubernetes/apps/networking/external-services/ks.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cluster-networking-external-services
-  namespace: flux-system
+  namespace: &namespace networking
 spec:
-  targetNamespace: networking
+  targetNamespace: *namespace
   dependsOn:
     - name: nginx-external
   path: ./kubernetes/apps/networking/external-services/minio
