--- a/kubernetes/apps/default/govee2mqtt/ks.yaml
+++ b/kubernetes/apps/default/govee2mqtt/ks.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname govee2mqtt
-  namespace: flux-system
+  namespace: &namespace default
 spec:
-  targetNamespace: default
+  targetNamespace: *namespace
   dependsOn:
     - name: multus-networks
     - name: external-secrets-stores
