--- a/kubernetes/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/apps/databases/influxdb/ks.yaml
@@ -20,6 +20,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta2
       kind: HelmRelease
