--- a/kubernetes/apps/default/umlautadaptarr/ks.yaml
+++ b/kubernetes/apps/default/umlautadaptarr/ks.yaml
@@ -17,6 +17,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
