--- a/kubernetes/apps/networking/external-dns/ks.yaml
+++ b/kubernetes/apps/networking/external-dns/ks.yaml
@@ -18,6 +18,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   wait: true
   interval: 30m
   timeout: 5m
@@ -41,6 +42,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   wait: true
   interval: 30m
   timeout: 5m
