--- a/kubernetes/apps/networking/nginx/ks.yaml
+++ b/kubernetes/apps/networking/nginx/ks.yaml
@@ -14,6 +14,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   interval: 30m
   prune: false # change back later
   wait: true
@@ -34,6 +35,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
@@ -54,6 +56,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
