--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -17,6 +17,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+    namespace: flux-system
   # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
   targetNamespace: flux-system
   timeout: 5m
@@ -42,6 +43,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
     namespace: flux-system
   timeout: 5m
   wait: false
