--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,7 +3,7 @@ version: "3"
 
 vars:
   K8S_CLUSTER: '{{.K8S_CLUSTER | default "main"}}'
-  K8S_CLUSTER_DIR: "{{.ROOT_DIR}}/kubernetes/{{.K8S_CLUSTER}}"
+  K8S_CLUSTER_DIR: "{{.ROOT_DIR}}/kubernetes"
 
 env:
   KUBECONFIG: "{{.ROOT_DIR}}/kubernetes/kubeconfig"
