--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
@@ -10,12 +10,11 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: system-upgrade
-    namespace: system-upgrade
+    namespace: kube-system
 ---
 apiVersion: talos.dev/v1alpha1
 kind: ServiceAccount
 metadata:
   name: system-upgrade
 spec:
-  roles:
-    - os:admin
+  roles: ["os:admin"]
