--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -90,22 +90,20 @@ spec:
     persistence:
       config:
         existingClaim: *app
-        advancedMounts:
-          plex:
-            app:
-              - path: /config
+        globalMounts:
+          - path: /config
+      config-cache:
+        existingClaim: plex-cache
+        globalMounts:
+          - path: /config/Library/Application Support/Plex Media Server/Cache
       logs:
         type: emptyDir
-        advancedMounts:
-          plex:
-            app:
-              - path: /config/Library/Application Support/Plex Media Server/Logs
+        globalMounts:
+          - path: /config/Library/Application Support/Plex Media Server/Logs
       transcode:
         type: emptyDir
-        advancedMounts:
-          plex:
-            app:
-              - path: /transcode
+        globalMounts:
+          - path: /transcode
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
