--- a/kubernetes/apps/databases/kustomization.yaml
+++ b/kubernetes/apps/databases/kustomization.yaml
@@ -8,6 +8,6 @@ components:
 resources:
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
-  - ./emqx/ks.yaml
+  - ./vernemq/ks.yaml
   - ./influxdb/ks.yaml
   - ./postgres-backup/ks.yaml
