--- a/kubernetes/apps/databases/vernemq/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/vernemq/app/helmrelease.yaml
@@ -12,8 +12,16 @@ spec:
       version: 4.0.1
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-labs
+        name: bjw-s
         namespace: flux-system
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      strategy: rollback
+      retries: 3
   values:
     controllers:
       vernemq:
